PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 20??, PHP 5.3.0
- Removed the experimental RPL (master/slave) functions from mysqli. (Andrey)

- Added concept of "delayed early binding" that allows opcode caches to perform
  class declaration (early and/or run-time binding) in exactly the same order
  as vanila php. (Dmitry)
- Added new error mode E_DEPRECATED which is used to inform about stuff to be
  dropped in future PHP versions. (Lars Strojny, Felipe, Marcus)
- Added and improved PHP syntax and semantics:
  . Added NOWDOC. (Gwynne Raskind, Stas, Dmitry)
  . Added "?:" operator. (Marcus)
  . Added support for namespaces. (Dmitry, Stas, Gregory)
  . Added support for Late Static Binding. (Dmitry, Etienne Kneuss)
  . Added support for __callstatic() magic method. (Sara)
  . Added support for dynamic access of static members using $foo::myFunc().
    (Etienne Kneuss)
  . Improved checks for callbacks. (Marcus)
  . Added __DIR__ constant. (Lars Strojny)
  . Added PHP_MAJOR_VERSION, PHP_MINOR_VERSION, PHP_RELEASE_VERSION,
    PHP_EXTRA_VERSION, PHP_VERSION_ID, PHP_ZTS and PHP_DEBUG constants (Pierre)
- Added new date/time functionality: (Derick)
  . date_parse_from_format(): Parse date/time strings according to a format.
  . date_create_from_format()/DateTime::createFromFormat(): Create a date/time
    object by parsing a date/time string according to a given format.
  . date_get_last_errors()/DateTime::getLastErrors(): Return a list of warnings
    and errors that were found while parsing a date/time string through:
    . strtotime() / new DateTime
    . date_create_from_format() / DateTime::createFromFormat()
    . date_parse_from_format()
  . support for abbreviation and offset based timezone specifiers for
    DateTime::getOffset() and DateTime::getName().
  . support for selectively listing timezone identifiers through